correções para o padrão W3C

--- a/sobre.html
+++ b/sobre.html
@@ -52,89 +52,85 @@
                 </ul>
             </div>
         </nav>
+    </header>
 
-
+    <main>
         <article>
-            <Main>
-                <div class="container">
-                    <!-- Introduction Row -->
-                    <h1 class="my-4">Sobre nós
-                        <small>conheça-nos!</small>
-                    </h1>
-                    <p><a href="http://www.eubiose.org.br" target="_blank">A Sociedade Brasileira de Eubiose</a> é uma sociedade fundada
-                        por Henrique José de Souza, apoiado por sua esposa Helena Jefferson de Souza, em São Lourenço,
-                        no ano de 1921. Seu conhecimento é uma síntese de Filosofia, Religião e Ciência.</p>
-
-                    <!-- Team Members Row -->
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h2 class="my-4">Nosso time</h2>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 text-center mb-4">
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-                            <h3>Luís H. Picinin Jandre
-                                <small>Developer</small>
-                            </h3>
-                            <p>Desenvolvedor de sistemas de médio/pequeno porte e estudante de Ciência da Computação.
-                            </p>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 text-center mb-4">
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-                            <h3>Heitor H. Gil Alexandre
-                                <small>Administrador</small>
-                            </h3>
-                            <p>What does this team member to? Keep it short! This is also a great spot for social links!
-                            </p>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 text-center mb-4">
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200"
-                                alt="">
-                            <h3>John Smith
-                                <small>Job Title</small>
-                            </h3>
-                            <p>What does this team member to? Keep it short! This is also a great spot for social links!
-                            </p>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 text-center mb-4">
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200"
-                                alt="">
-                            <h3>John Smith
-                                <small>Job Title</small>
-                            </h3>
-                            <p>What does this team member to? Keep it short! This is also a great spot for social links!
-                            </p>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 text-center mb-4">
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200"
-                                alt="">
-                            <h3>John Smith
-                                <small>Job Title</small>
-                            </h3>
-                            <p>What does this team member to? Keep it short! This is also a great spot for social links!
-                            </p>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 text-center mb-4">
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200"
-                                alt="">
-                            <h3>John Smith
-                                <small>Job Title</small>
-                            </h3>
-                            <p>What does this team member to? Keep it short! This is also a great spot for social links!
-                            </p>
-                        </div>
-                    </div>
-
-                </div>
-            </Main>
-
-        </article>
-        <footer class="py-5 bg-dark">
             <div class="container">
-                <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
+                <!-- Introduction Row -->
+                <h1 class="my-4">Sobre nós
+                    <small>conheça-nos!</small>
+                </h1>
+                <p><a href="http://www.eubiose.org.br" target="_blank">A Sociedade Brasileira de Eubiose</a> é uma
+                    sociedade fundada
+                    por Henrique José de Souza, apoiado por sua esposa Helena Jefferson de Souza, em São Lourenço,
+                    no ano de 1921. Seu conhecimento é uma síntese de Filosofia, Religião e Ciência.</p>
+
+                <!-- Team Members Row -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="my-4">Nosso time</h2>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center mb-4">
+                        <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+                        <h3>Luís H. Picinin Jandre
+                            <small>Developer</small>
+                        </h3>
+                        <p>Desenvolvedor de sistemas de médio/pequeno porte e estudante de Ciência da Computação.
+                        </p>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center mb-4">
+                        <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+                        <h3>Heitor H. Gil Alexandre
+                            <small>Administrador</small>
+                        </h3>
+                        <p>What does this team member to? Keep it short! This is also a great spot for social links!
+                        </p>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center mb-4">
+                        <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+                        <h3>John Smith
+                            <small>Job Title</small>
+                        </h3>
+                        <p>What does this team member to? Keep it short! This is also a great spot for social links!
+                        </p>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center mb-4">
+                        <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+                        <h3>John Smith
+                            <small>Job Title</small>
+                        </h3>
+                        <p>What does this team member to? Keep it short! This is also a great spot for social links!
+                        </p>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center mb-4">
+                        <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+                        <h3>John Smith
+                            <small>Job Title</small>
+                        </h3>
+                        <p>What does this team member to? Keep it short! This is also a great spot for social links!
+                        </p>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center mb-4">
+                        <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+                        <h3>John Smith
+                            <small>Job Title</small>
+                        </h3>
+                        <p>What does this team member to? Keep it short! This is also a great spot for social links!
+                        </p>
+                    </div>
+                </div>
+
             </div>
-            <script src="libs/jquery-3.4.1.min.js"></script>
-            <script src="libs/popper.min.js"></script>
-            <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+        </article>
+    </main>
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
+        </div>
+        <script src="libs/jquery-3.4.1.min.js"></script>
+        <script src="libs/popper.min.js"></script>
+        <script src="libs/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 
