--- a/subviews/colerico.html
+++ b/subviews/colerico.html
@@ -52,83 +52,83 @@
                 </ul>
             </div>
         </nav>
+    </header>
 
-
+    <main>
         <article>
-            <Main>
-                <div class="container">
-                    <!-- Jumbotron Header -->
-                    <header class="jumbotron my-4 bg-danger text-white">
-                        <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
-                        <p class="lead">Esta é uma página que descreve o temperamento colérico.</p>
-                    </header>
+            <div class="container">
+                <!-- Jumbotron Header -->
+                <div class="jumbotron my-4 bg-danger text-white">
+                    <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
+                    <p class="lead">Esta é uma página que descreve o temperamento colérico.</p>
+                </div>
 
-                    <section id="about">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Características</h2>
-                                    <p class="lead text-justify">Este temperamento é explosivo, ambicioso e dominador.
-                                        Indivíduos coléricos são determinados e
-                                        possuem grande capacidade de planejamento, além de muita energia e
-                                        impulsividade. São líderes natos e
-                                        explosivos.</p>
-                                    <ul>
-                                        <li><b>Pontos fortes: </b>determinação, habilidade de liderança e praticidade;
-                                        </li>
-                                        <li><b>Pontos que precisam ser trabalhados: </b>egocentrismo, intolerância e
-                                            impaciência.</li>
-                                        <!--<li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
+                <section id="about">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Características</h2>
+                                <p class="lead text-justify">Este temperamento é explosivo, ambicioso e dominador.
+                                    Indivíduos coléricos são determinados e
+                                    possuem grande capacidade de planejamento, além de muita energia e
+                                    impulsividade. São líderes natos e
+                                    explosivos.</p>
+                                <ul>
+                                    <li><b>Pontos fortes: </b>determinação, habilidade de liderança e praticidade;
+                                    </li>
+                                    <li><b>Pontos que precisam ser trabalhados: </b>egocentrismo, intolerância e
+                                        impaciência.</li>
+                                    <!--<li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
                       <li>Minimal custom CSS so you are free to explore your own unique design options</li>-->
-                                    </ul>
-                                </div>
+                                </ul>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                    <section id="services" class="bg-light">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Elemental</h2>
-                                    <p class="lead">Possui como elemento o Fogo.</p>
-                                </div>
+                <section id="services" class="bg-light">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Elemental</h2>
+                                <p class="lead">Possui como elemento o Fogo.</p>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                    <section id="contact">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Alimentação</h2>
-                                    <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
+                <section id="contact">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Alimentação</h2>
+                                <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
                                         fugiat voluptatem dolor,
                                         provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
-                                    <ul>
-                                        <li><b>Comer: </b>Vegetais, folhas, raízes e frutas, comer preferencialmente
-                                            carnes de animais leves(aves).</li>
-                                        <li><b>Evitar: </b>Carnes de animais selvagens, pimenta, temperos e gorduras.
-                                        </li>
-                                    </ul>
-                                </div>
+                                <ul>
+                                    <li><b>Comer: </b>Vegetais, folhas, raízes e frutas, comer preferencialmente
+                                        carnes de animais leves(aves).</li>
+                                    <li><b>Evitar: </b>Carnes de animais selvagens, pimenta, temperos e gorduras.
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                </div>
-            </Main>
-
-        </article>
-        <footer class="py-5 bg-dark">
-            <div class="container">
-                <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
             </div>
-            <script src="../libs/jquery-3.4.1.min.js"></script>
-            <script src="../libs/popper.min.js"></script>
-            <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
+        </article>
+
+    </main>
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
+        </div>
+        <script src="../libs/jquery-3.4.1.min.js"></script>
+        <script src="../libs/popper.min.js"></script>
+        <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 
