--- a/subviews/sanguineo.html
+++ b/subviews/sanguineo.html
@@ -52,82 +52,82 @@
                 </ul>
             </div>
         </nav>
+    </header>
 
-
+    <main>
         <article>
-            <main>
-                <div class="container">
-                    <!-- Jumbotron Header -->
-                    <header class="jumbotron my-4 bg-success text-white">
-                        <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
-                        <p class="lead">Esta é uma página que descreve o temperamento sanguíneo.</p>
-                    </header>
+            <div class="container">
+                <!-- Jumbotron Header -->
+                <div class="jumbotron my-4 bg-success text-white">
+                    <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
+                    <p class="lead">Esta é uma página que descreve o temperamento sanguíneo.</p>
+                </div>
 
-                    <section id="about">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Características</h2>
-                                    <p class="lead text-justify">Este temperamento é expansivo, otimista e impulsivo.
-                                        Extrovertidos e sensíveis, os sanguíneos
-                                        são indivíduos que não passam desapercebidos, pois são espontâneos e gostam de
-                                        interagir. Além disso,
-                                        costumam fazer gestos largos e falar bem em público.</p>
-                                    <ul>
-                                        <li><b>Pontos fortes: </b>São comunicativos, resilientes, adaptáveis e
-                                            entusiastas;
-                                        </li>
-                                        <li><b>Pontos que precisam ser trabalhados: </b>Impulsividade, falta de atenção,
-                                            superficialidade e exagero.</li>
-                                        <!--<li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
+                <section id="about">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Características</h2>
+                                <p class="lead text-justify">Este temperamento é expansivo, otimista e impulsivo.
+                                    Extrovertidos e sensíveis, os sanguíneos
+                                    são indivíduos que não passam desapercebidos, pois são espontâneos e gostam de
+                                    interagir. Além disso,
+                                    costumam fazer gestos largos e falar bem em público.</p>
+                                <ul>
+                                    <li><b>Pontos fortes: </b>São comunicativos, resilientes, adaptáveis e
+                                        entusiastas;
+                                    </li>
+                                    <li><b>Pontos que precisam ser trabalhados: </b>Impulsividade, falta de atenção,
+                                        superficialidade e exagero.</li>
+                                    <!--<li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
                           <li>Minimal custom CSS so you are free to explore your own unique design options</li>-->
-                                    </ul>
-                                </div>
+                                </ul>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                    <section id="services" class="bg-light">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Elemental</h2>
-                                    <p class="lead">Possui como elemento o Ar.</p>
-                                </div>
+                <section id="services" class="bg-light">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Elemental</h2>
+                                <p class="lead">Possui como elemento o Ar.</p>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                    <section id="contact">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Alimentação</h2>
-                                    <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
+                <section id="contact">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Alimentação</h2>
+                                <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
                                         fugiat voluptatem dolor,
                                         provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
-                                    <ul>
-                                        <li><b>Comer: </b>Raízes em geral(para prender-se a terra), vegetais baixos,
-                                            carnes de animais pesados, muitas frutas.</li>
-                                        <li><b>Evitar: </b>Comidas salgadas, comer pouco feijão e batata(tendem a
-                                            aumentar a pressão).</li>
-                                    </ul>
-                                </div>
+                                <ul>
+                                    <li><b>Comer: </b>Raízes em geral(para prender-se a terra), vegetais baixos,
+                                        carnes de animais pesados, muitas frutas.</li>
+                                    <li><b>Evitar: </b>Comidas salgadas, comer pouco feijão e batata(tendem a
+                                        aumentar a pressão).</li>
+                                </ul>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
 
-                </div>
-            </main>
-        </article>
-        <footer class="py-5 bg-dark">
-            <div class="container">
-                <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
             </div>
-            <!--
+        </article>
+    </main>
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
+        </div>
+        <!--
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"></script>
@@ -138,9 +138,9 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"></script>
       -->
-            <script src="../libs/jquery-3.4.1.min.js"></script>
-            <script src="../libs/popper.min.js"></script>
-            <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
+        <script src="../libs/jquery-3.4.1.min.js"></script>
+        <script src="../libs/popper.min.js"></script>
+        <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 
