--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
   <meta charset='utf-8'>
@@ -68,8 +68,8 @@
     </nav>
   </header>
 
-  <article>
-    <main>
+  <main>
+    <article>
       <!-- Page Content -->
       <div class="container">
 
@@ -158,8 +158,8 @@
       </div>
 
 
-    </main>
-  </article>
+    </article>
+  </main>
   <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
