--- a/questionario.html
+++ b/questionario.html
@@ -48,27 +48,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="subviews/fleumatico.html">Fleumático</a>
                     </li>
-                    <!--
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true"
-                  aria-expanded="false">Temperamentos</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown03">
-                  <a class="dropdown-item" href="subviews/sanguineo.html">Sanguíneo</a>
-                  <a class="dropdown-item" href="subviews/colerico.html">Colérico</a>
-                  <a class="dropdown-item" href="subviews/melancolico.html">Melancólico</a>
-                  <a class="dropdown-item" href="subviews/fleumatico.html">Fleumático</a>
-                </div>
-              </li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="sobre.html">Sobre</a>
                     </li>
                 </ul>
             </div>
         </nav>
+        </header>
 
-
-        <article>
-            <main>
+        <main>
+            <article>
                 <!-- Page Content -->
 
                 <div class="form" id="formquest">
@@ -116,8 +105,8 @@
                 <canvas id="horizontalBar"></canvas>
                 </div>
 
-            </main>
-        </article>
+            </article>
+        </main>
 
         <script src="libs/jquery-3.4.1.min.js"></script>
         <script src="libs/popper.min.js"></script>
