--- a/subviews/fleumatico.html
+++ b/subviews/fleumatico.html
@@ -52,85 +52,87 @@
                 </ul>
             </div>
         </nav>
+    </header>
 
-
+    <main>
         <article>
-            <Main>
-                <div class="container">
-                    <!-- Jumbotron Header -->
-                    <header class="jumbotron my-4 bg-primary text-white">
-                        <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
-                        <p class="lead">Esta é uma página que descreve o temperamento fleumático.</p>
-                    </header>
+            <div class="container">
+                <!-- Jumbotron Header -->
+                <div class="jumbotron my-4 bg-primary text-white">
+                    <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
+                    <p class="lead">Esta é uma página que descreve o temperamento fleumático.</p>
+                </div>
 
-                    <section id="about">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Características</h2>
-                                    <p class="lead text-justify">Este temperamento é sonhador, pacífico, dócil. Os
-                                        fleumáticos prezam a rotina, o silêncio e dificilmente perdem o controle, pois
-                                        costumam avaliar antes de reagir. São pacientes, observadores, disciplinados,
-                                        preferem não manifestar suas opiniões em público e não costumam reagir bem às
-                                        críticas.Este temperamento é sonhador, pacífico, dócil. Os fleumáticos prezam a
-                                        rotina, o silêncio e dificilmente perdem o controle, pois costumam avaliar antes
-                                        de reagir. São pacientes, observadores, disciplinados, preferem não manifestar
-                                        suas opiniões em público e não costumam reagir bem às críticas.</p>
-                                    <ul>
-                                        <li><b>Pontos fortes: </b>são equilibrados e confiáveis;</li>
-                                        <li><b>Pontos que precisam ser trabalhados:</b> lentidão, resistência as
-                                            mudanças e indecisão.</li>
-                                        <!--<li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
+                <section id="about">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Características</h2>
+                                <p class="lead text-justify">Este temperamento é sonhador, pacífico, dócil. Os
+                                    fleumáticos prezam a rotina, o silêncio e dificilmente perdem o controle, pois
+                                    costumam avaliar antes de reagir. São pacientes, observadores, disciplinados,
+                                    preferem não manifestar suas opiniões em público e não costumam reagir bem às
+                                    críticas.Este temperamento é sonhador, pacífico, dócil. Os fleumáticos prezam a
+                                    rotina, o silêncio e dificilmente perdem o controle, pois costumam avaliar antes
+                                    de reagir. São pacientes, observadores, disciplinados, preferem não manifestar
+                                    suas opiniões em público e não costumam reagir bem às críticas.</p>
+                                <ul>
+                                    <li><b>Pontos fortes: </b>são equilibrados e confiáveis;</li>
+                                    <li><b>Pontos que precisam ser trabalhados:</b> lentidão, resistência as
+                                        mudanças e indecisão.</li>
+                                    <!--<li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
                                     <li>Minimal custom CSS so you are free to explore your own unique design options</li>-->
-                                    </ul>
-                                </div>
+                                </ul>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                    <section id="services" class="bg-light">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Elemental</h2>
-                                    <p class="lead">Possui como elemento a Água.<!--<img src="../imagem/agua.png" width="20" height="20" alt="água" srcset="">--></p>
-                                </div>
+                <section id="services" class="bg-light">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Elemental</h2>
+                                <p class="lead">Possui como elemento a Água.
+                                    <!--<img src="../imagem/agua.png" width="20" height="20" alt="água" srcset="">-->
+                                </p>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                    <section id="contact">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Alimentação</h2>
-                                    <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
+                <section id="contact">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Alimentação</h2>
+                                <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
                                         fugiat voluptatem dolor,
                                         provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
-                                    <ul>
-                                        <li><b>Comer: </b>Não podem ser vegetariano, devem comer carnes de animais
-                                            rápidos e ligeiros, e comida com pimenta, e louro. O salsão e similares são
-                                            bons porque movimentam os líquidos.</li>
-                                        <li><b>Evitar: </b>Raízes, farinha, sopas e mingau em hipótese alguma. </li>
-                                    </ul>
-                                </div>
+                                <ul>
+                                    <li><b>Comer: </b>Não podem ser vegetariano, devem comer carnes de animais
+                                        rápidos e ligeiros, e comida com pimenta, e louro. O salsão e similares são
+                                        bons porque movimentam os líquidos.</li>
+                                    <li><b>Evitar: </b>Raízes, farinha, sopas e mingau em hipótese alguma. </li>
+                                </ul>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                </div>
-            </Main>
-
-        </article>
-        <footer class="py-5 bg-dark">
-            <div class="container">
-                <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
             </div>
-            <script src="../libs/jquery-3.4.1.min.js"></script>
-            <script src="../libs/popper.min.js"></script>
-            <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
+        </article>
+
+    </main>
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
+        </div>
+        <script src="../libs/jquery-3.4.1.min.js"></script>
+        <script src="../libs/popper.min.js"></script>
+        <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 
