--- a/subviews/melancolico.html
+++ b/subviews/melancolico.html
@@ -52,84 +52,84 @@
                 </ul>
             </div>
         </nav>
+    </header>
 
-
+    <main>
         <article>
-            <Main>
-                <div class="container">
-                    <!-- Jumbotron Header -->
-                    <header class="jumbotron my-4 bg-warning text-black">
-                        <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
-                        <p class="lead">Esta é uma página que descreve o temperamento melancólico.</p>
-                    </header>
+            <div class="container">
+                <!-- Jumbotron Header -->
+                <div class="jumbotron my-4 bg-warning text-black">
+                    <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
+                    <p class="lead">Esta é uma página que descreve o temperamento melancólico.</p>
+                </div>
 
-                    <section id="about">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Características</h2>
-                                    <p class="lead text-justify">Este temperamento é tímido, artístico e solitário. Os
-                                        melancólicos têm a sensibilidade muito
-                                        aflorada, e são pessoas profundas, detalhistas e introvertidas, com tendência a
-                                        guardar seus sentimentos. São
-                                        fiéis, desconfiados e tendem a escolher profissões que possam exercer sozinhos.
-                                    </p>
-                                    <ul>
-                                        <li><b>Pontos fortes: </b>Lealdade, dedicação e sensibilidade;</li>
-                                        <li><b>Pontos que precisam ser trabalhados: </b>Egoísmo, pessimismo e
-                                            inflexibilidade.</li>
-                                        <!--<li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
+                <section id="about">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Características</h2>
+                                <p class="lead text-justify">Este temperamento é tímido, artístico e solitário. Os
+                                    melancólicos têm a sensibilidade muito
+                                    aflorada, e são pessoas profundas, detalhistas e introvertidas, com tendência a
+                                    guardar seus sentimentos. São
+                                    fiéis, desconfiados e tendem a escolher profissões que possam exercer sozinhos.
+                                </p>
+                                <ul>
+                                    <li><b>Pontos fortes: </b>Lealdade, dedicação e sensibilidade;</li>
+                                    <li><b>Pontos que precisam ser trabalhados: </b>Egoísmo, pessimismo e
+                                        inflexibilidade.</li>
+                                    <!--<li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
                       <li>Minimal custom CSS so you are free to explore your own unique design options</li>-->
-                                    </ul>
-                                </div>
+                                </ul>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                    <section id="services" class="bg-light">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Elemental</h2>
-                                    <p class="lead">Possui como elemento a Terra.</p>
-                                </div>
+                <section id="services" class="bg-light">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Elemental</h2>
+                                <p class="lead">Possui como elemento a Terra.</p>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                    <section id="contact">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-8 mx-auto">
-                                    <h2>Alimentação</h2>
-                                    <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
+                <section id="contact">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8 mx-auto">
+                                <h2>Alimentação</h2>
+                                <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
                                         fugiat voluptatem dolor,
                                         provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
-                                    <ul>
-                                        <li><b>Comer: </b>Peixes e aves constituem uma boa alimentação para o
-                                            melancólico, assim como frutas, folhas, flores, aveia e doces(são bons pois
-                                            nesse temperamento facilitam a atividade hepática).</li>
-                                        <li><b>Evitar: </b>Sal, temperos salinos, raízes e plantas baixas e
-                                            principalmente alimentos oleosos e gordurosos.</li>
-                                    </ul>
-                                </div>
+                                <ul>
+                                    <li><b>Comer: </b>Peixes e aves constituem uma boa alimentação para o
+                                        melancólico, assim como frutas, folhas, flores, aveia e doces(são bons pois
+                                        nesse temperamento facilitam a atividade hepática).</li>
+                                    <li><b>Evitar: </b>Sal, temperos salinos, raízes e plantas baixas e
+                                        principalmente alimentos oleosos e gordurosos.</li>
+                                </ul>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                </section>
 
-                </div>
-            </Main>
-
-        </article>
-        <footer class="py-5 bg-dark">
-            <div class="container">
-                <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
             </div>
-            <script src="../libs/jquery-3.4.1.min.js"></script>
-            <script src="../libs/popper.min.js"></script>
-            <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
+        </article>
+
+    </main>
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
+        </div>
+        <script src="../libs/jquery-3.4.1.min.js"></script>
+        <script src="../libs/popper.min.js"></script>
+        <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 
