--- a/subviews/sanguineo.html
+++ b/subviews/sanguineo.html
@@ -127,7 +127,8 @@
         <div class="container">
             <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
         </div>
-        <!--
+    </footer>
+    <!--
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"></script>
@@ -138,9 +139,9 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"></script>
       -->
-        <script src="../libs/jquery-3.4.1.min.js"></script>
-        <script src="../libs/popper.min.js"></script>
-        <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../libs/jquery-3.4.1.min.js"></script>
+    <script src="../libs/popper.min.js"></script>
+    <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 
