--- a/subviews/colerico.html
+++ b/subviews/colerico.html
@@ -126,9 +126,10 @@
         <div class="container">
             <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
         </div>
-        <script src="../libs/jquery-3.4.1.min.js"></script>
-        <script src="../libs/popper.min.js"></script>
-        <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
+    </footer>
+    <script src="../libs/jquery-3.4.1.min.js"></script>
+    <script src="../libs/popper.min.js"></script>
+    <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 
