--- a/questionario.html
+++ b/questionario.html
@@ -54,68 +54,73 @@
                 </ul>
             </div>
         </nav>
-        </header>
+    </header>
 
-        <main>
-            <article>
-                <!-- Page Content -->
+    <main>
+        <article>
+            <!-- Page Content -->
 
-                <div class="form" id="formquest">
+            <div class="form" id="formquest">
 
 
-                    <form>
-                        <label class="label" id="tituloquestionario">1) Selecione uma Caracteristica</label>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                value="option1" checked>
-                            <label class="form-check-label" for="exampleRadios1" id="q1">
-                                Comunicativo
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
-                                value="option2">
-                            <label class="form-check-label" for="exampleRadios2" id="q2">
-                                Energético
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
-                                value="option3">
-                            <label class="form-check-label" for="exampleRadios3" id="q3">
-                                Habilidoso
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4"
-                                value="option4">
-                            <label class="form-check-label" for="exampleRadios4" id="q4">
-                                Calmo
-                            </label>
-                        </div>
-                        <div id="botoesForm">
-                            <button type="button" class="btn btn-primary" onclick="anterior();">Back</button>
-                            <button type="button" class="btn btn-success" onclick="proximo();">Next</button>
-                        </div>
-                    </form>
+                <form>
+                    <label class="label" id="tituloquestionario">1) Selecione uma Caracteristica</label>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                            value="option1" checked>
+                        <label class="form-check-label" for="exampleRadios1" id="q1">
+                            Comunicativo
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
+                            value="option2">
+                        <label class="form-check-label" for="exampleRadios2" id="q2">
+                            Energético
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
+                            value="option3">
+                        <label class="form-check-label" for="exampleRadios3" id="q3">
+                            Habilidoso
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4"
+                            value="option4">
+                        <label class="form-check-label" for="exampleRadios4" id="q4">
+                            Calmo
+                        </label>
+                    </div>
+                    <div id="botoesForm">
+                        <button type="button" class="btn btn-primary" onclick="anterior();">Back</button>
+                        <button type="button" class="btn btn-success" onclick="proximo();">Next</button>
+                    </div>
+                </form>
 
-                </div class="container">
+            </div class="container">
 
-                <!--Novo-->
-                <canvas id="horizontalBar"></canvas>
-                </div>
+            <!--Novo-->
+            <canvas id="horizontalBar"></canvas>
+            </div>
+            <!--<br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
 
-            </article>
-        </main>
+        </article>
+    </main>
+    <footer class="py-2 bg-dark fixed-bottom" id="rodapeQuest">
+        <div class="container">
+            <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
+        </div>
+    </footer>
+    <script src="libs/jquery-3.4.1.min.js"></script>
+    <script src="libs/popper.min.js"></script>
+    <script src="libs/bootstrap/js/bootstrap.min.js"></script>
 
-        <script src="libs/jquery-3.4.1.min.js"></script>
-        <script src="libs/popper.min.js"></script>
-        <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-
-        <script src="libs/grafico/mdb.min.js"></script>
-        <!-- <script src="libs/canvasjs/jquery.canvasjs.min.js"></script>-->
-        <!--<script src="libs/googleChart/loader.js"></script>-->
-        <script src="js/questionario.js"></script>
+    <script src="libs/grafico/mdb.min.js"></script>
+    <!-- <script src="libs/canvasjs/jquery.canvasjs.min.js"></script>-->
+    <!--<script src="libs/googleChart/loader.js"></script>-->
+    <script src="js/questionario.js"></script>
 
 
 
