tentativa de correção do fundo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="container">
 
         <!-- Jumbotron Header -->
-        <div class="jumbotron my-4">
+        <div class="jumbotron my-4 shadow">
           <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
           <p class="lead">Esta é uma página para a realização do questionário sobre temperamentos.</p>
           <a class="btn btn-primary btn-lg" href="questionario.html" role="button">Começar»</a>
