descrição da SBE justificado

--- a/sobre.html
+++ b/sobre.html
@@ -61,7 +61,7 @@
                 <h1 class="my-4">Sobre nós
                     <small>conheça-nos!</small>
                 </h1>
-                <p><a href="http://www.eubiose.org.br" target="_blank">A Sociedade Brasileira de Eubiose</a> é uma
+                <p class="lead text-justify"><a href="http://www.eubiose.org.br" target="_blank">A Sociedade Brasileira de Eubiose</a> é uma
                     sociedade fundada
                     por Henrique José de Souza, apoiado por sua esposa Helena Jefferson de Souza, em São Lourenço,
                     no ano de 1921. Seu conhecimento é uma síntese de Filosofia, Religião e Ciência.</p>
