--- a/questionario.html
+++ b/questionario.html
@@ -64,7 +64,7 @@
 
 
                 <form>
-                    <label class="label" id="tituloquestionario">1) Selecione uma Caracteristica</label>
+                    <label class="label lead" id="tituloquestionario">1) Selecione uma Caracteristica</label>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
                             value="option1" checked>
