--- a/subviews/colerico.html
+++ b/subviews/colerico.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <!-- Jumbotron Header -->
                 <div class="jumbotron my-4 bg-danger text-white">
-                    <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
+                    <h1 class="display-3">Colérico</h1>
                     <p class="lead">Esta é uma página que descreve o temperamento colérico.</p>
                 </div>
 
@@ -73,7 +73,7 @@
                                     possuem grande capacidade de planejamento, além de muita energia e
                                     impulsividade. São líderes natos e
                                     explosivos.</p>
-                                <ul>
+                                <ul class="lead">
                                     <li><b>Pontos fortes: </b>determinação, habilidade de liderança e praticidade;
                                     </li>
                                     <li><b>Pontos que precisam ser trabalhados: </b>egocentrismo, intolerância e
@@ -107,7 +107,7 @@
                                         provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
-                                <ul>
+                                <ul class="lead">
                                     <li><b>Comer: </b>Vegetais, folhas, raízes e frutas, comer preferencialmente
                                         carnes de animais leves(aves).</li>
                                     <li><b>Evitar: </b>Carnes de animais selvagens, pimenta, temperos e gorduras.
