--- a/subviews/fleumatico.html
+++ b/subviews/fleumatico.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <!-- Jumbotron Header -->
                 <div class="jumbotron my-4 bg-primary text-white">
-                    <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
+                    <h1 class="display-3">Fleumático</h1>
                     <p class="lead">Esta é uma página que descreve o temperamento fleumático.</p>
                 </div>
 
@@ -76,7 +76,7 @@
                                     rotina, o silêncio e dificilmente perdem o controle, pois costumam avaliar antes
                                     de reagir. São pacientes, observadores, disciplinados, preferem não manifestar
                                     suas opiniões em público e não costumam reagir bem às críticas.</p>
-                                <ul>
+                                <ul class="lead">
                                     <li><b>Pontos fortes: </b>são equilibrados e confiáveis;</li>
                                     <li><b>Pontos que precisam ser trabalhados:</b> lentidão, resistência as
                                         mudanças e indecisão.</li>
@@ -111,7 +111,7 @@
                                         provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
-                                <ul>
+                                <ul class="lead">
                                     <li><b>Comer: </b>Não podem ser vegetariano, devem comer carnes de animais
                                         rápidos e ligeiros, e comida com pimenta, e louro. O salsão e similares são
                                         bons porque movimentam os líquidos.</li>
