--- a/subviews/melancolico.html
+++ b/subviews/melancolico.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <!-- Jumbotron Header -->
                 <div class="jumbotron my-4 bg-warning text-black">
-                    <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
+                    <h1 class="display-3">Melancólico</h1>
                     <p class="lead">Esta é uma página que descreve o temperamento melancólico.</p>
                 </div>
 
@@ -74,7 +74,7 @@
                                     guardar seus sentimentos. São
                                     fiéis, desconfiados e tendem a escolher profissões que possam exercer sozinhos.
                                 </p>
-                                <ul>
+                                <ul class="lead">
                                     <li><b>Pontos fortes: </b>Lealdade, dedicação e sensibilidade;</li>
                                     <li><b>Pontos que precisam ser trabalhados: </b>Egoísmo, pessimismo e
                                         inflexibilidade.</li>
@@ -107,7 +107,7 @@
                                         provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
-                                <ul>
+                                <ul class="lead">
                                     <li><b>Comer: </b>Peixes e aves constituem uma boa alimentação para o
                                         melancólico, assim como frutas, folhas, flores, aveia e doces(são bons pois
                                         nesse temperamento facilitam a atividade hepática).</li>
