--- a/subviews/sanguineo.html
+++ b/subviews/sanguineo.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <!-- Jumbotron Header -->
                 <div class="jumbotron my-4 bg-success text-white">
-                    <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
+                    <h1 class="display-3">Sanguíneo</h1>
                     <p class="lead">Esta é uma página que descreve o temperamento sanguíneo.</p>
                 </div>
 
@@ -73,7 +73,7 @@
                                     são indivíduos que não passam desapercebidos, pois são espontâneos e gostam de
                                     interagir. Além disso,
                                     costumam fazer gestos largos e falar bem em público.</p>
-                                <ul>
+                                <ul class="lead">
                                     <li><b>Pontos fortes: </b>São comunicativos, resilientes, adaptáveis e
                                         entusiastas;
                                     </li>
@@ -108,7 +108,7 @@
                                         provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
-                                <ul>
+                                <ul class="lead">
                                     <li><b>Comer: </b>Raízes em geral(para prender-se a terra), vegetais baixos,
                                         carnes de animais pesados, muitas frutas.</li>
                                     <li><b>Evitar: </b>Comidas salgadas, comer pouco feijão e batata(tendem a
