--- a/questionario.html
+++ b/questionario.html
@@ -69,28 +69,28 @@
                         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
                             value="option1" checked>
                         <label class="form-check-label" for="exampleRadios1" id="q1">
-                            Comunicativo
+                            Bom Companheiro
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
                             value="option2">
                         <label class="form-check-label" for="exampleRadios2" id="q2">
-                            Energético
+                            Audacioso
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
                             value="option3">
                         <label class="form-check-label" for="exampleRadios3" id="q3">
-                            Habilidoso
+                            Sensível
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4"
                             value="option4">
                         <label class="form-check-label" for="exampleRadios4" id="q4">
-                            Calmo
+                            Bom-Humorado
                         </label>
                     </div>
                     <div id="botoesForm">
