começo da citação das fontes

--- a/sobre.html
+++ b/sobre.html
@@ -61,7 +61,8 @@
                 <h1 class="my-4">Sobre nós
                     <small>conheça-nos!</small>
                 </h1>
-                <p class="lead text-justify"><a href="http://www.eubiose.org.br" target="_blank">A Sociedade Brasileira de Eubiose</a> é uma
+                <p class="lead text-justify"><a href="http://www.eubiose.org.br" target="_blank">A Sociedade Brasileira
+                        de Eubiose</a> é uma
                     sociedade fundada
                     por Henrique José de Souza, apoiado por sua esposa Helena Jefferson de Souza, em São Lourenço,
                     no ano de 1921. Seu conhecimento é uma síntese de Filosofia, Religião e Ciência.</p>
@@ -123,6 +124,21 @@
 
             </div>
         </article>
+        <div class="container">
+            <!--
+            <p class="lead">Essa é uma página dedicada a divulgação de um trabalho de conclusão de grau da 
+            <b style="font-family: 'Gentium Book Basic';">Sociedade Brasileira de Eubiose</b>.</p>
+            -->
+            <blockquote class="blockquote">
+                <p class="mb-0">Informações retiradas das seguintes fontes</p>
+                <div class="blockquote-footer">Os Quatro Temperamentos. Um Guia Prático Para Compreender A Si Mesmo E As
+                    Pessoas Em Sua Vida.<cite title="Source Title"> Renee Baron</cite>
+                </div>
+                <div class="blockquote-footer">Corpus Hippocraticum.<cite title="Source Title"> Hipócrates</cite>
+                </div>
+            </blockquote>
+        </div>
+
     </main>
     <footer class="py-5 bg-dark">
         <div class="container">
